# midi_conversion_plugin

./: .eslintrc.cjs  .gitignore  README.md  afterSignHook.js  afterSignHook.ts  binding.gyp  buildmuse.sh  electron-builder.json5  index.html  notarize.sh  package-lock.json  package.json  sign.js  tailwind.config.js  test.js  tsconfig.json  vite.config.ts
app-build/: entitlements.mac.plist  halbestundeplugin.provisionprofile
electron/: main.ts  preload.ts
lib/: index.ts
lib/db/: index.ts
lib/mac/: MuseClientSdk.node
lib/muse/: MuseClientSdk_addon.cpp  binding.gyp  index.ts  types.d.ts
lib/muse-win-v2/: MuseClientSdk.1.0.2.lib  MuseClientSdk.ipdb  MuseClientSdk.node
lib/muse/MuseClientSDK/: README.md
lib/muse/mac/: MuseClientSdk.node  libMuseClientSdk.dylib
lib/muse/muse-mac-v2/: MuseClientSdk.node
lib/muse/muse-win-v2/: MuseClientSdk.iobj  MuseClientSdk.ipdb  MuseClientSdk.node
lib/muse/win/: MuseClientSdk.iobj  MuseClientSdk.ipdb  MuseClientSdk.node
lib/native-addon/: binding.gyp  index.ts  native.cc  package-lock.json  package.json
lib/win/: MuseClientSdk.iobj  MuseClientSdk.ipdb  MuseClientSdk.lib
muse/: MuseClientSdkApi.h  MuseSdkApiVersion.h  app.cpp  main.cpp  muse_sdk.cc
muse/example/: CMakeLists.txt
public/: db.sqlite3
src/: App.tsx  bindings.ts  index.css  main.tsx  types.d.ts
src/components/AppBar/: index.tsx  styles.ts
src/components/Modal/: index.tsx
src/constants/: index.ts
src/lib/: index.ts
src/store/: index.ts  useFileStore.ts  useProcessingStateStore.ts
src/styles/: index.ts
src/utils/: helpers.ts  logger.ts
(+24 files in other folders)
